# mcp-guard

./: README.md  pyproject.toml
mcp_guard/: __init__.py  cli.py  fixer.py  rules.py  scanner.py
test_fixtures/: vulnerable_mcp.json
