[project]
name = "mcp-guard"
version = "0.1.0"
description = "Security audit CLI for MCP (Model Context Protocol) configurations. Find leaked API keys, excessive permissions, and vulnerable servers before attackers do."
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]

[project.scripts]
mcp-guard = "mcp_guard.cli:main"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"
